<resources>
    <string name="app_name">My Money</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type">Type</string>
    <string name="value">Value</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="add_new">Add new</string>
    <string name="set_date">Set date</string>
</resources>